# multiple_aruco_tf

./: CMakeLists.txt  README.md  package.xml
camera_info/: laptop_camera.yaml  rbpi_camera.yaml
launch/: get_image.launch  get_transformation.launch  multiple_aruco_tf.launch  remote_visualization.launch
rviz/: config.rviz
src/: image_sat.cpp  multiple_aruco_tf.cpp  relative_pose.cpp
srv/: CurrentPose.srv
test/: Giovanni  SERGIO  omar  rafael
