<?xml version="1.0"?>
<package format="2">
  <name>multiple_aruco_tf</name>
  <version>0.0.0</version>
  <description>The multiple_aruco_tf package</description>
  <maintainer email="rafael@todo.todo">rafael</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>aruco_ros</depend>
  <export> </export>
</package>
 
